force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__AnalysisLink__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__AnalysisLink__c</fullName>
    <formula>HYPERLINK(&quot;/apex/cwbtool__ImpactAnalysis?savedAnalysisId=&quot;+ Id, &quot;Click here to view analysis&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analysis Link</label>
    <type>Text</type>
</CustomField>