force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__BatchID__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__BatchID__c</fullName>
    <label>Batch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>