force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__Export_to_Excel__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Export_to_Excel__c</fullName>
    <formula>HYPERLINK(&quot;/apex/cwbtool__ImpactAnalysisExportToExcel?savedAnalysisId=&quot;+ Id, &quot;Export To Excel&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export to Excel</label>
    <type>Text</type>
</CustomField>