force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__ExportToPDF__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ExportToPDF__c</fullName>
    <formula>HYPERLINK(&quot;/apex/cwbtool__ExportToPDF?savedAnalysisId=&quot;+ Id, &quot;Export To PDF&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export To PDF</label>
    <type>Text</type>
</CustomField>