force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__Field__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>