force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__IgnoreHeapIssue__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__IgnoreHeapIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Heap Issue</label>
    <type>Checkbox</type>
</CustomField>