force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__Object__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Object__c</fullName>
    <label>Object</label>
    <length>200</length>
    <type>Text</type>
</CustomField>