force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__ObjectUniqueReference__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ObjectUniqueReference__c</fullName>
    <label>Object Unique Reference</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>