force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__PicklistValue__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__PicklistValue__c</fullName>
    <label>Picklist Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>