force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__Search_Type__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Search_Type__c</fullName>
    <label>Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom Field References</fullName>
                <default>true</default>
                <label>Custom Field References</label>
            </value>
            <value>
                <fullName>Object References</fullName>
            </value>
            <value>
                <fullName>Label References</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>