force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__Status__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>