force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__Summary__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Summary__c</fullName>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>