force-app/main/default/objects/cwbtool__AnalysisSummary__c/fields/cwbtool__Total_Completed_Batch__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Total_Completed_Batch__c</fullName>
    <label>Total Completed Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>