force-app/main/default/objects/cwbtool__AnalysisSummary__c/listViews/cwbtool__All.listView-meta.xml
<ListView>
    <fullName>cwbtool__All</fullName>
    <columns>cwbtool__Status__c</columns>
    <columns>cwbtool__Search_Type__c</columns>
    <columns>NAME</columns>
    <columns>cwbtool__Object__c</columns>
    <columns>cwbtool__Field__c</columns>
    <columns>cwbtool__AnalysisLink__c</columns>
    <columns>cwbtool__ExportToPDF__c</columns>
    <columns>cwbtool__Export_to_Excel__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>cwbtool__Summary__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>